dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/assignment/array.alg
algoritmo "erro atribuicao"

var
    teste: vetor[1..1] de inteiro

inicio

    teste[1] <- "a"

fimalgoritmo
